se crean rutas nuevas y agrupadas
