# v1/app/Http/Controllers/CategoryController.php
@@ -5,14 +5,43 @@ namespace App\Http\Controllers;
 use App\Models\Category;
 use Illuminate\Http\Request;
 
+
 class CategoryController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * Listado de todos las categorias disponibles
+     * @OA\Get (
+     *     path="/api/categorias",
+     *     tags={"Categorias"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 type="array",
+     *                 property="rows",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(
+     *                         property="id",
+     *                         type="number",
+     *                         example="1"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="category_name",
+     *                         type="string",
+     *                         example="nombre de categoria"
+     *                     ),
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
      */
+
     public function index()
     {
-        //
+        return Category::all();
     }
 
     /**
@@ -24,7 +53,19 @@ class CategoryController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     *
+     * @OA\Post(
+     *  path="api/categorias/store/{id}",
+     *  tags={"Categorias"},
+     *  @OA\Response(
+     *          response=404,
+     *          description="NOT FOUND",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="No se ha encontrado información disponible"),
+     *          )
+     *      )
+     * ),
+
      */
     public function store(Request $request)
     {
@@ -32,11 +73,43 @@ class CategoryController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * Mostrar la información de una categoria pasando un ID
+     * @OA\Get (
+     *     path="/api/categoria/{id}",
+     *     tags={"Categorias"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Categoria ID",
+     *         required=true,
+     *         @OA\Schema(
+     *              type="integer",
+     *              format="int64",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="category_name", type="string", example="nombre de categoria"),
+     *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
+     *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
+     *         )
+     *     ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="NOT FOUND",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="No se ha encontrado información disponible"),
+     *          )
+     *      )
+     * )
      */
-    public function show(Category $category)
+    public function show(Request $request)
     {
-        //
+        $category_id = $request->id;
+        return Category::where('id', '=', $category_id)->first();
     }
 
     /**
@@ -48,7 +121,18 @@ class CategoryController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     *
+     * @OA\Patch(
+     *  path="api/categorias/update/{id}",
+     *  tags={"Categorias"},
+     *  @OA\Response(
+     *          response=404,
+     *          description="NOT FOUND",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="No se ha encontrado información disponible"),
+     *          )
+     *      )
+     * ),
      */
     public function update(Request $request, Category $category)
     {
@@ -56,7 +140,18 @@ class CategoryController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     *
+     * @OA\Delete(
+     *  path="api/categorias/store/{id}",
+     *  tags={"Categorias"},
+     *  @OA\Response(
+     *          response=404,
+     *          description="NOT FOUND",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="No se ha encontrado información disponible"),
+     *          )
+     *      )
+     * ),
      */
     public function destroy(Category $category)
     {
