# v1/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\ProductController;
 use App\Models\Category;
 use App\Models\Product;
@@ -22,24 +23,28 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::get('productos', [ProductController::class, 'index']);
+Route::controller(ProductController::class)->group(function () {
+    Route::get('productos', 'index');
+});
 
-Route::get('categories', function () {
-    return Category::all();
+//grupo de rutas para categorias
+Route::controller(CategoryController::class)->group(function () {
+    Route::get('categorias', 'index');
+    Route::get('categoria/{id}', 'show');
+    Route::post('categoria/store/{id}', 'store');
+    Route::patch('');
+    Route::delete('');
 });
 
 //GO TO
 // Crear una ruta que muestre los productos por categoria usando Eloquent
 
-Route::get('producto-categoria/{id}', function(Request $request){
-
-    $categoria = $request->id;
-
-    $producto = new Product();
-    return $producto->where('category_id', '=', $categoria)->get();
+Route::get('producto-categoria/{id}', function (Request $request) {
+    $categoria_id = $request->id;
+    return Product::find($categoria_id);
 });
 
-Route::get('categoria-productos', function(Request $request){
+Route::get('categoria-productos', function (Request $request) {
     $categoria = new Category();
     $productos = $categoria->product->get();
 
@@ -47,4 +52,3 @@ Route::get('categoria-productos', function(Request $request){
 
     return $productos;
 });
-
